# Teak

./: .gitignore  README.md  USAGE.md  bench-tasks.example.json  pyproject.toml
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/scripts/: check-tauri-prereqs.mjs
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
src/teak/: __main__.py  bench.py  cli.py  config.py
src/teak/brain/: __init__.py  bootstrapper.py  manager.py  templates.py
src/teak/context/: __init__.py  embedder.py  graph.py  indexer.py  parser.py  rag.py  storage.py
src/teak/flow/: __init__.py  graph.py  state.py
src/teak/flow/nodes/: __init__.py  brain_updater.py  convention_check.py  executor.py  handoff.py  human_approval.py  planner.py  router.py  step_review.py  verifier.py
src/teak/llm/: __init__.py  budget.py  cache.py  client.py  routing.py
src/teak/prompts/: __init__.py  bootstrapper.md  brain_updater.md  convention_check.md  executor.md  handoff.md  planner.md  system.md
src/teak/session/: __init__.py  handoff.py
src/teak/tui/: __init__.py  approval.py  chat.py  status.py
src/teak/vcs/: __init__.py  repo.py
tests/: test_brain.py  test_budget.py  test_config.py  test_context.py  test_phase3.py  test_phase4.py  test_phase5.py  test_planner_parsing.py  test_routing.py
