[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teak"
version = "0.1.0"
description = "Lightweight AI-native coding companion with a persistent Project Brain."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Teak" }]
keywords = ["ai", "cli", "coding-assistant", "langgraph", "llm"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.60",
    "langgraph>=0.2",
    "litellm>=1.40",
    "GitPython>=3.1",
    "pydantic>=2.7",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
context = [
    "tree-sitter>=0.22",
    "tree-sitter-language-pack>=0.2",
    "watchdog>=4.0",
    "sqlite-vec>=0.1.1",
]
patch = [
    "patch-ng>=1.17",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
teak = "teak.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
teak = ["prompts/*.md"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
