[package]
name = "teak-desktop"
version = "0.1.0"
description = "Desktop shell for Teak"
authors = ["Teak"]
edition = "2021"

[lib]
name = "teak_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
